--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Using Conditional Tokens, an EthCC3 workshop.",
   "main": "index.js",
   "scripts": {
-    "test": "truffle test"
+    "test": "run-with-testrpc -d 'truffle test'"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,14 @@
   "homepage": "https://github.com/cag/uct#readme",
   "private": true,
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.4",
+    "chai": "^4.2.0",
     "mocha-steps": "^1.3.0",
+    "run-with-testrpc": "^0.3.1",
     "truffle": "^5.1.15"
   },
   "dependencies": {
-    "@gnosis.pm/conditional-tokens-contracts": "^1.0.1"
+    "@gnosis.pm/conditional-tokens-contracts": "^1.0.1",
+    "@openzeppelin/contracts": "^2.5.0"
   }
 }
